force-app/main/default/objects/Report_Finder_Category_Filter__c/Report_Finder_Category_Filter__c.object-meta.xml
<CustomObject>
    <label>Report Finder Category Filter</label>
    <nameField>
        <displayFormat>RFCF-{0}</displayFormat>
        <label>Report Finder Category Filter #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Finder Category Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>