force-app/main/default/objects/Report_Finder_Category_Filter__c/fields/Report_Detail__c.field-meta.xml
<CustomField>
    <fullName>Report_Detail__c</fullName>
    <label>Report Detail</label>
    <referenceTo>Advancement_Report__c</referenceTo>
    <relationshipName>Report_Finder_Category_Filters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>