force-app/main/default/objects/Report_Finder_Category_Filter__c/fields/Report_Finder_Category__c.field-meta.xml
<CustomField>
    <fullName>Report_Finder_Category__c</fullName>
    <label>Report Finder Category</label>
    <referenceTo>Report_Finder_Category__c</referenceTo>
    <relationshipName>Report_Finder_Category_Filters</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>